--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       {
         "src": "/(.*)",
         "headers": {
-          "Access-Control-Allow-Origin": "https://blood-donate-c5xr.vercel.app",
+          "Access-Control-Allow-Origin": "https://haqatoon-fronted.vercel.app/",
           "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
           "Access-Control-Allow-Headers": "Content-Type, Authorization"
         },
